FIX Set max-height 100vh and overflow scroll

--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -1,5 +1,7 @@
 #wrap {
   min-height: 100vh;
+  max-height: 100vh;
+
   background: rgb(2,0,36);
   background: linear-gradient(318deg,
     rgba(2,0,36,1) 0%,
